# nina-template-r

./: .gitignore  .pre-commit-config.yaml  README.md  README.md.jinja  copier.yaml  ctt.toml  pixi.toml.jinja  pyproject.toml
.github/workflows/: pre-commit.yml
template_scripts/: maintenance.sh  release.sh
